--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "buttercms": "^1.2.3",
     "next": "^9.3.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
