--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "buttercms": "^1.2.3",
     "next": "^9.3.3",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "sass": "^1.26.10"
   }
 }
