--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "buttercms": "^1.2.3",
     "next": "^9.3.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-material-ui-form-validator": "^2.1.0",
+    "react-modal-video": "^1.2.5",
     "sass": "^1.26.10"
   }
 }
