--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "buttercms": "^1.2.3",
+    "express": "^4.17.1",
     "lazysizes": "^5.2.2",
     "next": "^9.3.3",
     "react": "^16.13.0",
