--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.13.0",
     "react-material-ui-form-validator": "^2.1.0",
     "react-modal-video": "^1.2.5",
-    "sass": "^1.26.10"
+    "sass": "^1.26.10",
+    "social-likes-next": "^1.1.0"
   }
 }
