--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "buttercms": "^1.2.3",
     "express": "^4.17.1",
+    "firebase": "^7.18.0",
     "lazysizes": "^5.2.2",
     "next": "^9.3.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-material-ui-form-validator": "^2.1.0",
     "react-modal-video": "^1.2.5",
+    "react-simplemde-editor": "^4.1.3",
     "sass": "^1.26.10",
     "social-likes-next": "^1.1.0"
   }
