--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "next": "^9.3.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-markdown": "^4.3.1",
     "react-material-ui-form-validator": "^2.1.0",
     "react-modal-video": "^1.2.5",
+    "react-quill": "^1.3.5",
     "react-simplemde-editor": "^4.1.3",
     "sass": "^1.26.10",
     "social-likes-next": "^1.1.0"
