--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^7.18.0",
     "lazysizes": "^5.2.2",
     "next": "^9.3.3",
+    "next-fbq": "^2.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-markdown": "^4.3.1",
