--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "buttercms": "^1.2.3",
+    "emailjs-com": "^2.6.3",
     "express": "^4.17.1",
     "firebase": "^7.18.0",
     "lazysizes": "^5.2.2",
@@ -22,6 +23,7 @@
     "react-material-ui-form-validator": "^2.1.0",
     "react-modal-video": "^1.2.5",
     "react-quill": "^1.3.5",
+    "react-recaptcha": "^2.3.10",
     "react-simplemde-editor": "^4.1.3",
     "sass": "^1.26.10",
     "social-likes-next": "^1.1.0"
