--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "buttercms": "^1.2.3",
-    "emailjs-com": "^2.6.3",
+    "emailjs-com": "^2.6.4",
     "express": "^4.17.1",
     "firebase": "^7.18.0",
     "lazysizes": "^5.2.2",
     "next": "^9.3.3",
     "next-fbq": "^2.0.0",
+    "nextjs-redirect": "^5.0.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-google-recaptcha": "^2.1.0",
